--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!-- Unit 13 Project
 Requirements
-[  ] Two Interactive Drop-down Inputs 
-[  ] Two Different jQuery Animation Methods 
-[  ] Add Five CSS Declarations
-[  ] Include Three Images
+[ yes ] Two Interactive Drop-down Inputs 
+[ yes ] Two Different jQuery Animation Methods 
+[ yes ] Add Five CSS Declarations
+[ yes ] Include Three Images
 
 Select ONE Additional Feature to Add  
-[ no ] Feature 1 - Google Font
+[ yes ] Feature 1 - Google Font
 [ no ] Feature 2 - Upload a Font
 [ no ] Feature 3 - .mouseover() Method
 [ no ] Feature 4 - :hover Feature 
@@ -15,74 +15,108 @@ Select ONE Additional Feature to Add
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Unit 13 Project</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <h1>Quiz About [Me]</h1>
-    <hr />
-    <!-- Movie Question -->
-    <form id="movie-form">
-      <label>
-        🎥 What is my favorite movie?
-        <select id="movie-answer">
-          <option value="movie1">movie 1</option>
-          <option value="movie2">movie 2</option>
-          <option value="movie3">movie 3</option>
-          <option value="movie4">movie 4</option>
-        </select>
-      </label>
-      <button type="submit">Check Movie Answer</button>
-    </form>
-    <div id="movie-result"></div>
-    <hr />
-    <!-- Book Question -->
-    <form id="book-form">
-      <label>
-        📖 What is my favorite book?
-        <select id="book-answer">
-          <option value="book1">book 1</option>
-          <option value="book2">book 2</option>
-          <option value="book3">book 3</option>
-          <option value="book4">book 4</option>
-        </select>
-      </label>
-      <button type="submit">Check Book Answer</button>
-    </form>
-    <div id="book-result"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script>
-      //Movie Question jQuery Code
-      $("#movie-form").on("submit", function (event) {
-        event.preventDefault();
+  <html>
+    <head>
+      <meta charset="utf-8" />
+      <title>Unit 13 Project</title>
+      <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+      <h1>NICK-QUIZ</h1>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/en/6/68/Riddler.png"
+        style="height: 100px"
+      />
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Icon-round-Question_mark.svg/1024px-Icon-round-Question_mark.svg.png"
+        style="height: 100px"
+      />
+      <img
+        src="https://cdn.glitch.global/08f18e07-a9ff-4a30-94f9-6ea3cddeccb4/6d15921d-7c8a-480d-8ab1-88facabdd21a.image.png?v=1748882910853"
+        style="height: 100px"
+        <hr
+      />
+      <!-- movie question -->
+      <form id="movie-form">
+        <label>
+          Whats my Favorite Moive?
+          <select id="movie-answer">
+            == $0
+            <option value="movie1">Hamilton</option>
+            <option value="movie2">Barbie Movie</option>
+            <option value="movie3">Top Gun</option>
+            <option value="movie4">Coraline</option>
+          </select></label
+        >
+        <button type="submit">Check Answer</button>
+      </form>
+      <div id="movie-result"></div>
+      <hr />
+      <!-- books question -->
+      <form id="book-form">
+        <label>
+          What is my Favorite Book?
+          <select id="book-answer">
+            <option value="book1">Frankenstein</option>
+            <option value="book2">Of Mice and Men</option>
+            <option value="book3">Cats Lair</option>
+            <option value="book4">Joy Luck Club</option>
+          </select>
+        </label>
+        <button type="submit">Check Answer</button>
+      </form>
+      <div id="book-result"></div>
+      <img
+        id="incorrect_1"
+        src="https://picon.ngfiles.com/946000/flash_946916_card.webp?f1725642518"
+        style="display: none"
+      />
+      <img
+        id="correct_1"
+        src="https://t3.ftcdn.net/jpg/02/80/92/32/360_F_280923216_tdvgRe94KeFQHQ6mJlpd0WjpQvHkteKc.jpg"
+        style="display: none"
+      />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+      <script>
+        // Movie  jQuery Code
+        $("#movie-form").on("submit", function (event) {
+          event.preventDefault();
 
-        var $answer = $("#movie-answer");
-        var answer = $answer.val();
+          var $answer = $("#movie-answer");
+          var answer = $answer.val();
 
-        if (answer === "movie1") {
-          $("#movie-result").text("YESSSS!");
-        } else {
-          $("#movie-result").text("Try Again!");
-        }
-      });
+          $("#correct_1").hide();
+          $("#incorrect_1").hide();
 
-      //Book Question jQuery Code
-      $("#book-form").on("submit", function (event) {
-        event.preventDefault();
+          if (answer === "movie4") {
+            $("#movie-result").text("YES");
+            $("#correct_1").show(1000);
+          } else {
+            $("#movie-result").text("WRONG");
+            $("#incorrect_1").show(1000);
+          }
+        });
 
-        var $answer = $("#book-answer");
-        var answer = $answer.val();
+        // Book  jQuery Code
+        $("#book-form").on("submit", function (event) {
+          event.preventDefault();
 
-        if (answer === "book1") {
-          $("#book-result").text("YESSSS!");
-        } else {
-          $("#book-result").text("Try Again!");
-        }
-      });
-    </script>
-  </body>
+          var $answer = $("#book-answer");
+          var answer = $answer.val();
 
-  <!--- Taken From Khan Academy HTML/JS: Making webpages interactive with jQuery-->
+          $("#correct_1").hide();
+          $("#incorrect_1").hide();
+
+          if (answer === "book2") {
+            $("#book-result").text("YES");
+            $("#correct_1").show(1000);
+          } else {
+            $("#book-result").text("WRONG");
+            $("#incorrect_1").fadeIn(1000);
+          }
+        });
+      </script>
+    </body>
+  </html>
+  <!-- Taken From Khan Academy HTML/JS: Making webpages interactive with jQuery-->
 </html>
